# GDMegaOverlay

./: .gitignore  .gitmodules  AUTHORS  CMakeLists.txt  README.md  about.md  mod.json
.github/ISSUE_TEMPLATE/: code-issue.md  code_issue.md  config.yml
.github/workflows/: build.yml  cmake.yml
cmake/: discord-rpc.cmake  gdr.cmake  git.cmake  libsndfile.cmake  nhjson.cmake  portable-file-dialogs.cmake  subprocess.cmake
libs/: .gitignore
libs/cocos-headers/: .gitmodules
libs/cocos-headers/.github/workflows/: documentation.yml
libs/cocos-headers/cocos2dx/: CCDirector.h  libcocos2d.lib
libs/cocos-headers/cocos2dx/actions/: CCAction.h
libs/cocos-headers/cocos2dx/base_nodes/: CCNode.h
libs/cocos-headers/cocos2dx/cocoa/: CCArray.h  CCGeometry.h  CCObject.h  CCString.h
libs/cocos-headers/cocos2dx/draw_nodes/: CCDrawNode.h
libs/cocos-headers/cocos2dx/include/: ccMacros.h  ccTypes.h  cocos2d.h
libs/cocos-headers/cocos2dx/label_nodes/: CCLabelBMFont.h
libs/cocos-headers/cocos2dx/layers_scenes_transitions_nodes/: CCLayer.h  CCScene.h
libs/cocos-headers/cocos2dx/misc_nodes/: CCRenderTexture.h
libs/cocos-headers/cocos2dx/particle_nodes/: CCParticleSystem.h  CCParticleSystemQuad.h
libs/cocos-headers/cocos2dx/platform/: CCApplicationProtocol.h  CCFileUtils.h  CCPlatformMacros.h
libs/cocos-headers/cocos2dx/platform/win32/: CCApplication.h  CCEGLView.h  CCFileUtilsWin32.h  CCPlatformDefine.h  CCStdC.h
libs/cocos-headers/cocos2dx/platform/winrt/: CCEGLView.h  CCStdC.h
libs/cocos-headers/cocos2dx/robtop/keyboard_dispatcher/: CCKeyboardDelegate.h  CCKeyboardDispatcher.h
libs/cocos-headers/cocos2dx/robtop/mouse_dispatcher/: CCMouseDelegate.h  CCMouseDispatcher.h
libs/cocos-headers/cocos2dx/robtop/xml/: DS_Dictionary.h
libs/cocos-headers/cocos2dx/shaders/: CCGLProgram.h
libs/cocos-headers/cocos2dx/sprite_nodes/: CCSprite.h  CCSpriteBatchNode.h  CCSpriteFrame.h
libs/cocos-headers/cocos2dx/support/zip_support/: ZipUtils.h
libs/cocos-headers/cocos2dx/text_input_node/: CCTextFieldTTF.h
libs/cocos-headers/cocos2dx/textures/: CCTextureCache.h
libs/cocos-headers/cocos2dx/touch_dispatcher/: CCTouchDispatcher.h
libs/cocos-headers/document/: Doxyfile  Groups.h  conv-macros.py  header.html
libs/cocos-headers/extensions/: cocos-ext.h
libs/cocos-headers/extensions/CocoStudio/Action/: CCActionFrame.h  CCActionManager.h  CCActionNode.h  CCActionObject.h
libs/cocos-headers/extensions/CocoStudio/Armature/: CCArmature.h
libs/cocos-headers/extensions/CocoStudio/Json/: DictionaryHelper.h
libs/cocos-headers/extensions/CocoStudio/Json/rapidjson/: reader.h
libs/cocos-headers/extensions/CocoStudio/Trigger/: ObjectFactory.h  TriggerMng.h  TriggerObj.h
libs/cocos-headers/extensions/GUI/CCEditBox/: CCEditBox.h  CCEditBoxImplWp8.h
libs/cocos-headers/extensions/network/: HttpRequest.h
libs/discord-rpc/src/: connection_unix.cpp  connection_win.cpp  discord_register_linux.cpp  discord_register_win.cpp  serialization.h
libs/fmod-headers/: CMakeLists.txt
libs/fmod-headers/lib/: fmod_vc.lib
libs/fmod/inc/: fmod.cs  fmod_common.h
libs/fmod/lib/x64/: fmodL_vc.lib
libs/fmod/lib/x86/: fmod_vc.lib
libs/gdr/: gdr.hpp
libs/glew/: LICENCE.txt  glew32.lib
libs/imgui-hook/: CMakeLists.txt  README.md  imgui-hook.cpp  imgui-hook.hpp
libs/imgui-hook/imgui/: imgui.cpp  imgui.h  imgui_demo.cpp  imgui_internal.h  imgui_widgets.cpp
libs/imgui-hook/imgui/backends/: imgui_impl_opengl3.cpp  imgui_impl_win32.h
libs/imgui-hook/imgui/misc/cpp/: imgui_stdlib.cpp
libs/imgui-hook/include/imgui/backends/: imgui_impl_win32.h
libs/imgui-hook/src/: imgui-hook.cpp
libs/imgui-hook/src/imgui/backends/: imgui_impl_opengl3.cpp  imgui_impl_win32.cpp
libs/imgui-hook/src/imgui/misc/cpp/: imgui_stdlib.cpp
libs/libsndfile/lib/: sndfile.lib
libs/lru_cache/: lru_cache.hpp
libs/minhook/: .gitignore  CMakeLists.txt  README.md
libs/minhook/src/: hook.c
libs/portaudio/lib/: portaudio_x86.lib
res/: Style.style  default_windows.json
res/hacks/: bypass.json  creator.json  global.json  level.json  player.json  variables.json
src/: API.cpp  API.h  CCSchedulerHook.cpp  Common.cpp  Common.h  ConstData.h  CreatorLayer.cpp  CreatorLayer.h  CustomAction.cpp  CustomAction.h  CustomSongWidget.cpp  CustomSongWidget.h  DemonRouletteLayer.h  DiscordManager.cpp  DiscordManager.h  EndLevelLayer.cpp  EndLevelLayer.h  ExitAlert.cpp  ExitAlert.h  ExternData.cpp  ExternData.h  Favourites.cpp  Favourites.h  FetchDemonlist.cpp  FetchDemonlist.h  FpsMult.cpp  FpsMult.h  Hacks.h  HitboxNode.cpp  HitboxNode.hpp  LevelEditorLayer.cpp  LevelEditorLayer.h  LevelInfoLayer.cpp  LevelInfoLayer.h  LevelSearchLayer.cpp  LevelSearchLayer.h  ListFetcher.cpp  ListFetcher.h  MenuLayer.cpp  MenuLayer.h  (+41 more)
src/DiscordRPCManager/: DiscordRPCManager.cpp  DiscordRPCManager.h
src/GUI/: Blur.cpp  Blur.h  GUI.cpp  GUI.h  RenderTexture.cpp  RenderTexture.h  Shortcut.cpp  Shortcut.h  Widgets.cpp  Widgets.h  Window.cpp  Window.h  WindowAction.cpp  WindowAction.h
src/Hacks/: AudioChannelControl.cpp  AudioChannelControl.h  AutoDeafen.cpp  AutoDeafen.h  EndLeveLayerInfo.h  EndLevelLayerInfo.cpp  EndLevelLayerInfo.h  HidePause.cpp  HidePause.h  HitboxMultiplier.cpp  HitboxMultiplier.h  Labels.cpp  Labels.h  LayoutMode.cpp  PhysicsBypass.cpp  PhysicsBypass.h  ReplayLastCheckpoint.cpp  ReplayLastCheckpoint.h  SafeMode.cpp  SafeMode.h  ShowHitboxes.cpp  ShowHitboxes.h  SimpleHacks.cpp  SimpleHacks.h  Speedhack.cpp  Speedhack.h  StartposSwitcher.cpp  StartposSwitcher.h
src/Hitbox/: Hitbox.cpp  Hitbox.h  HitboxNode.cpp  HitboxNode.hpp
src/JsonHacks/: JsonHacks.cpp  JsonHacks.h
src/JsonPatches/: JsonPatches.cpp  JsonPatches.h
src/Macrobot/: AudioRecord.cpp  AudioRecord.h  Clickpacks.cpp  Clickpacks.h  Macrobot.cpp  Macrobot.h  Record.cpp  Record.h  record.cpp  record.hpp
src/types/: GJGameLevel.hpp  SeedValue.hpp
